fix first review not showing on breakpoint

--- a/src/components/Reviews/Reviews.module.css
+++ b/src/components/Reviews/Reviews.module.css
@@ -28,7 +28,7 @@
   flex-basis: 564px;
   flex-shrink: 1;
   flex-grow: 0;
-  padding-right:20px;
+  margin-right:35px;
 }
 
 .avatar {
